<resources>
    <string name="app_name">Explorer Link Demo</string>

    <string name="cancel">取消</string>
    <string name="delete">删除</string>
    <string name="verify">确认</string>
    <string name="confirm">确定</string>
    <string name="invite">邀请</string>
    <string name="share">分享</string>
    <string name="commit">提交</string>
    <string name="refuse">拒绝</string>
    <string name="accept">接受</string>
    <string name="agree">同意</string>
    <string name="save">保存</string>
    <string name="ok">OK</string>

    <string name="add_device">添加设备</string>
    <string name="device_list">设备列表</string>
    <string name="show_all_device">显示所有设备</string>
    <string name="no_devices">没有设备</string>
    <string name="scan_add">扫码添加</string>
    <string name="smart_config">智能配网</string>
    <string name="soft_ap">自助配网</string>

    <string name="personal_info">个人信息</string>
    <string name="message_notify">消息通知</string>
    <string name="feedback">意见反馈</string>
    <string name="nick">昵称</string>
    <string name="telephone_number">手机号</string>
    <string name="modify_password">修改密码</string>
    <string name="logout">退出登录</string>
    <string name="set_avatar">设置头像</string>
    <string name="take_photo">拍照</string>
    <string name="select_local_album">选择图库</string>
    <string name="demo_name">IoT Video</string>
    <string name="iot_demo_name">IoT Video Demo</string>
    <string name="welcome">欢迎使用腾讯云 IoT Video</string>
    <string name="video">IoT Video（消费版）</string>
    <string name="video_pro">IoT Video（行业版）</string>
    <string name="video_wlan">IoT Video（局域网）</string>
    <string name="video_client_token">Client token</string>
    <string name="search_devs">探测设备</string>
    <string name="api_tip">应用端API</string>
    <string name="api_contain">有</string>
    <string name="api_not_contain">无</string>
    <string name="use_video_sdk">使用多媒体SDK</string>
    <string name="login">登录</string>
    <string name="access_id">Access ID</string>
    <string name="access_token">Access Token</string>
    <string name="product_id">Product ID</string>
    <string name="hint_access_id">请输入Access ID</string>
    <string name="hint_access_token">请输入Access Token</string>
    <string name="hint_product_id">请输入Product ID</string>
    <string name="hint_client_token">请输入Client Token</string>
    <string name="please_use_sdk">请选择使用多媒体 SDK</string>
    <string name="my_devs">我的设备</string>
    <string name="complete_edit_devs">完成</string>
    <string name="edit_devs">编辑</string>
    <string name="online">在线</string>
    <string name="offline">离线</string>
    <string name="devs_limit">最多选择\n4台摄像机</string>
    <string name="at_least_one">至少选择1台摄像机</string>
    <string name="edit_devs_2_show">编辑同屏摄像机</string>
    <string name="preview">预览</string>
    <string name="playback">回放</string>
    <string name="preview_mjpeg">图片流mjpeg</string>
    <string name="cloud_playback">云记录</string>
    <string name="local_playback">本地记录</string>
    <string name="switc_orientation_h">切换横屏</string>
    <string name="switc_orientation_v">切换竖屏</string>
    <string name="dev_offline">设备离线</string>
    <string name="last_month">上个月</string>
    <string name="next_month">下个月</string>
    <string name="sunday">日</string>
    <string name="monday">一</string>
    <string name="tuesday">二</string>
    <string name="wednesday">三</string>
    <string name="thursday">四</string>
    <string name="friday">五</string>
    <string name="saturday">六</string>
    <string name="today">今天</string>
    <string name="year_and_month_unit">%s年%s月</string>
    <string name="checked_date_no_video">该日期无录像</string>
    <string name="checked_date_first">请选择日期</string>
    <string name="talk">对讲</string>
    <string name="record">录像</string>
    <string name="recording">录像中</string>
    <string name="photo">拍照</string>
    <string name="video_quality_high">1080P</string>
    <string name="video_quality_medium">720P</string>
    <string name="video_quality_low">360P</string>
    <string name="video_quality_high_str">超清</string>
    <string name="video_quality_medium_str">高清</string>
    <string name="video_quality_low_str">标清</string>
    <string name="week">星期</string>
    <string name="video_quality">画质</string>
    <string name="no_data">没有数据</string>
    <string name="paused">已暂停</string>
    <string name="capture_successed">已保存至相册</string>
    <string name="devs_checked">已选择 %d 台设备</string>
    <string name="query_failed">查询失败</string>
    <string name="record_failed">该音视频格式不支持录像</string>
    <string name="time_2_show">P2P 连接时间: %s(ms) \n\n 出图时间: %s(ms)</string>
    <string name="disconnected_and_reconnecting">%s 通道断开，正在重连</string>
    <string name="connected">%s 通道建立成功</string>
    <string name="error_with_code">%s 连接错误码 %s，通道断开</string>
    <string name="xp2p_err_version">APP SDK 版本与设备端 SDK 版本号不匹配，版本号需前两位保持一致</string>
    <string name="command_with_error">执行信令 %s 不成功</string>
    <string name="loading">加载中</string>
    <string name="play_speed_0_5">0.5X</string>
    <string name="play_speed_0_75">0.75X</string>
    <string name="play_speed_1">1X</string>
    <string name="play_speed_1_25">1.25X</string>
    <string name="play_speed_1_5">1.5X</string>
    <string name="play_speed_2">2X</string>
    <string name="play_speed_title">播放倍速</string>

    <!--家庭管理-->
    <string name="family_manager">家庭管理</string>
    <string name="family_name">家庭名称</string>
    <string name="invite_family_member">邀请家庭成员</string>
    <string name="family_member">家庭成员</string>
    <string name="add_family">添加家庭</string>
    <string name="family_address">家庭位置</string>
    <string name="empty_family">请输入家庭名称</string>
    <string name="empty_room">请输入房间名称</string>
    <string name="add_room">添加房间</string>
    <string name="room_manager">房间管理</string>
    <string name="family_detail">家庭详情</string>
    <string name="delete_family">删除家庭</string>
    <string name="exit_family">退出家庭</string>
    <string name="invite_member">邀请成员</string>
    <string name="room_setting">房间设置</string>
    <string name="delete_room">删除房间</string>
    <string name="room_name">家庭名称</string>
    <string name="member_setting">成员设置</string>
    <string name="member_name">成员名称</string>
    <string name="member_role">角色</string>
    <string name="member_account">关联账号</string>
    <string name="role_owner">所有者</string>
    <string name="role_member">成员</string>
    <string name="delete_member">移除成员</string>

    <!--popup toast-->
    <string name="toast_delete_family_title">您确定要删除该家庭吗？</string>
    <string name="toast_delete_family_content">删除家庭后，系统将清除所有的成员与家庭数据，该家庭下的设备也将被删除</string>
    <string name="toast_exit_family_title">您确定要退出该家庭吗？</string>
    <string name="toast_exit_family_content">退出家庭后，可重新接受邀请</string>
    <string name="toast_delete_room_title">您确定要删除该房间吗？</string>
    <string name="toast_delete_room_content">删除房间后，系统将清除房间数据，该房间下的设备也将被删除</string>
    <string name="toast_delete_member_title">您确定要删除该成员吗？</string>
    <string name="toast_delete_member_content">删除成员后，可重新邀请</string>
    <string name="delete_toast_title">确定要删除设备码？</string>
    <string name="delete_toast_content">删除后数据无法直接恢复</string>

    <string name="device">\t\t设备\t\t</string>
    <string name="family">\t\t家庭\t\t</string>
    <string name="notify">\t\t通知\t\t</string>
    <string name="empty_message">暂无消息</string>

    <!--云端定时-->
    <string name="cloud_timing">云端定时</string>
    <string name="add_timer">添加定时</string>
    <string name="modify_timer">修改定时</string>
    <string name="timer_name">定时名称</string>
    <string name="action_name">动作名称</string>
    <string name="repeat">重复</string>
    <string name="work_day">工作日</string>
    <string name="weekend">周末</string>
    <string name="device_action">设备动作</string>
    <string name="delete_action">删除动作</string>
    <string name="timing_name">名称设置</string>
    <string name="no_and_add_timer">当前暂无云端定时，点击按钮进行添加</string>
    <string name="every_sunday">每周日</string>
    <string name="every_monday">每周一</string>
    <string name="every_tuesday">每周二</string>
    <string name="every_wednesday">每周三</string>
    <string name="every_thursday">每周四</string>
    <string name="every_friday">每周五</string>
    <string name="every_saturday">每周六</string>

    <!--设备分享-->
    <string name="device_share">设备分享</string>
    <string name="share_device">共享设备</string>
    <string name="add_share">添加分享</string>

    <!--p2p下载-->
    <string name="download_one_at_a_time">同时只支持一个录像下载.</string>
    <string name="fail_to_create_path">创建本地回放存储路径失败</string>
    <string name="do_not_download_repeat">已经下载过该文件，不需要重复下载</string>
    <string name="download_complete">下载完成</string>
    <string name="download_fail">下载失败</string>
    <string name="downloading">下载中</string>

    <!--rtc-->
    <string name="trtccalling_title_video_call">"视频通话"</string>
    <string name="trtccalling_tips_start_call">"点击上方按钮发起呼叫"</string>
    <string name="trtccalling_dialed_is_busy">"正在通话中..."</string>
    <string name="trtccalling_waiting_to_hear">"等待接听中..."</string>
    <string name="trtccalling_waiting_to_hear_audio">"语音呼叫中..."</string>
    <string name="trtccalling_waiting_to_hear_vedio">"视频呼叫中..."</string>
    <string name="trtccalling_dialed_is_busy_audio">"语音通话中..."</string>
    <string name="trtccalling_dialed_is_busy_vedio">"视频通话中..."</string>
    <string name="trtccalling_customer_hand_up">"对方已挂断..."</string>
    <string name="trtccalling_customer_offline">"对方设备已离线，请稍后再试"</string>
    <string name="trtccalling_customer_no_resp">"对方无人接听..."</string>
    <string name="trtccalling_customer_no_net">"网络异常，请稍后重试"</string>
    <string name="trtccalling_customer_busy">"对方正忙..."</string>
    <string name="trtccalling_other_customer_accpet">"其他用户已接听..."</string>
    <string name="trtccalling_customer_calling_audio">"语音通话邀请"</string>
    <string name="trtccalling_customer_calling_vedio">"视频通话邀请"</string>
    <string name="trtccalling_call_time_default">"00:01"</string>
    <string name="trtccalling_contact_default_name">"测试123"</string>
    <string name="trtccalling_invite_video_call">"邀请您进行视频通话..."</string>
    <string name="trtccalling_search_call_hint">搜索手机号</string>
    <string name="trtccalling_start_call">"呼叫"</string>
    <string name="trtccalling_complete">"开始"</string>
    <string name="trtccalling_search">"搜 索"</string>
    <string name="trtccalling_toast_search_fail" formatted="false">"搜索失败:%1$s"</string>
    <string name="trtccalling_toast_not_add_self">"不能添加自己"</string>
    <string name="trtccalling_toast_call_error_msg" formatted="false">"发生错误[%1$d]:%2$s"</string>
    <string name="trtccalling_toast_user_reject_call" formatted="false">"%1$s拒绝通话"</string>
    <string name="trtccalling_toast_user_not_response" formatted="false">"%1$s无响应"</string>
    <string name="trtccalling_toast_user_busy" formatted="false">"%1$s忙线"</string>
    <string name="trtccalling_toast_user_cancel_call" formatted="false">"%1$s取消了通话"</string>
    <string name="trtccalling_toast_user_timeout" formatted="false" >"%1$s通话超时"</string>
    <string name="trtccalling_toast_enable_mute">"开启静音"</string>
    <string name="trtccalling_toast_disable_mute">"关闭静音"</string>
    <string name="trtccalling_toast_use_speaker">"使用扬声器"</string>
    <string name="trtccalling_toast_use_handset">"使用听筒"</string>
    <string name="trtccalling_called_time_format" formatted="false">"%02d:%02d"</string>
    <string name="trtccalling_title_recent_search">"最近搜索"</string>
    <string name="trtccalling_title_search_result">"搜索结果"</string>
    <string name="trtccalling_tips_search">"搜索添加已注册用户\n\t\t\t以发起通话"</string>
    <string name="trtccalling_self_phone">您的手机号:</string>
    <string name="trtccalling_call_self_format">您的手机号: %s</string>
    <string name="trtccalling_video_call">视频通话</string>
    <string name="trtccalling_audio_call">语音通话</string>
    <string name="trtccalling_toast_user_end">%s 结束通话</string>

</resources>
