<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.tencent.iot.explorer.link.demo.common.util.StatusBarHeightView
        android:id="@+id/v_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:use_type="use_padding_top">

    </com.tencent.iot.explorer.link.demo.common.util.StatusBarHeightView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toTopOf="@id/btn_video"
        app:layout_constraintTop_toBottomOf="@id/v_bar">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="128dp"
            android:layout_height="0dp"
            android:src="@mipmap/iot_video_logo"
            app:layout_constraintDimensionRatio="h,1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/demo_name"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/welcome"
            android:textSize="@dimen/ts_20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_logo" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <Button
        android:id="@+id/btn_video"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/background_blue_cell_btn"
        android:text="@string/video"
        android:textAllCaps="false"
        android:textColor="@color/blue_0052D9"
        android:textSize="@dimen/ts_17"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_video_pro"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/background_blue_cell_btn"
        android:text="@string/video_pro"
        android:textAllCaps="false"
        android:textColor="@color/blue_0052D9"
        android:textSize="@dimen/ts_17"
        app:layout_constraintTop_toBottomOf="@id/btn_video" />

    <Button
        android:id="@+id/btn_video_wlan"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/background_blue_cell_btn"
        android:text="@string/video_wlan"
        android:textAllCaps="false"
        android:textColor="@color/blue_0052D9"
        android:textSize="@dimen/ts_17"
        app:layout_constraintTop_toBottomOf="@id/btn_video_pro" />

    <Button
        android:id="@+id/btn_video_test"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/background_blue_cell_btn"
        android:text="@string/video_test"
        android:textAllCaps="false"
        android:textColor="@color/blue_0052D9"
        android:textSize="@dimen/ts_17"
        app:layout_constraintTop_toBottomOf="@id/btn_video_wlan" />

</androidx.constraintlayout.widget.ConstraintLayout>