<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include
        android:id="@+id/v_title"
        layout="@layout/title_layout" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/v_title"
        android:background="@color/black_1A000000"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/type_layout"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintTop_toBottomOf="@id/v_title"
        android:layout_marginTop="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/ts_17"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/api_tip"
            android:layout_marginStart="16dp"
            />

        <ImageView
            android:id="@+id/iv_contain"
            android:layout_width="24dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="h,1:1"
            android:layout_marginStart="147dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <RadioGroup
            android:id="@+id/rg_use_api"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="147dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radio_contain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:textSize="@dimen/ts_17"
                android:button="@null"
                android:drawablePadding="8dp"
                android:drawableLeft="@drawable/background_radio_style"
                android:text="@string/api_contain" />
            <RadioButton
                android:id="@+id/radio_not_contain"
                android:layout_marginStart="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/ts_17"
                android:button="@null"
                android:drawablePadding="8dp"
                android:drawableLeft="@drawable/background_radio_style"
                android:text="@string/api_not_contain" />
        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/black_1A000000"
            android:layout_marginStart="16dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        android:id="@+id/access_id_layout"
        layout="@layout/input_item_layout"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintTop_toBottomOf="@id/type_layout"
        />

    <include
        android:id="@+id/access_token_layout"
        layout="@layout/input_item_layout"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintTop_toBottomOf="@id/access_id_layout"
        />

    <include
        android:id="@+id/product_id_layout"
        layout="@layout/input_item_layout"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintTop_toBottomOf="@id/access_token_layout"
        />

    <CheckBox
        android:id="@+id/btn_use_sdk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/product_id_layout"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:checked="true"
        android:textSize="@dimen/ts_17"
        android:button="@null"
        android:drawablePadding="8dp"
        android:drawableLeft="@drawable/background_radio_check_style"
        android:text="@string/use_video_sdk" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_use_sdk"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/ts_17"
        android:background="@drawable/background_blue_btn"
        />


</androidx.constraintlayout.widget.ConstraintLayout>