<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/member_contain"
    tools:context=".core.activity.MemberActivity">

    <include
        android:id="@+id/menu_member"
        layout="@layout/menu_back_layout" />

    <com.tencent.iot.explorer.link.demo.common.customView.RoundImageView
        android:id="@+id/iv_member_portrait"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="40dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/image_default_portrait"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu_member" />

    <TextView
        android:id="@+id/tv_member_name_title"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:gravity="center_vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/member_name"
        android:textColor="@color/black_333333"
        android:textSize="@dimen/ts_18"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_member_portrait" />

    <TextView
        android:id="@+id/tv_member_name"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="110dp"
        android:layout_marginEnd="28dp"
        android:ellipsize="end"
        android:gravity="center_vertical|right"
        android:maxLines="1"
        android:text="天天"
        android:textColor="@color/gray_cccccc"
        android:textSize="@dimen/ts_16"
        app:layout_constraintBottom_toBottomOf="@+id/tv_member_name_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_member_name_title" />

    <ImageView
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_marginEnd="20dp"
        android:visibility="gone"
        android:src="@mipmap/icon_right_arrow"
        app:layout_constraintBottom_toBottomOf="@+id/tv_member_name_title"
        app:layout_constraintRight_toRightOf="@+id/tv_member_name_title"
        app:layout_constraintTop_toTopOf="@+id/tv_member_name_title" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/gray_F5F5F5"
        app:layout_constraintBottom_toBottomOf="@+id/tv_member_name_title" />

    <TextView
        android:id="@+id/tv_member_account_title"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/member_account"
        android:textColor="@color/black_333333"
        android:textSize="@dimen/ts_18"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_member_name_title" />

    <TextView
        android:id="@+id/tv_member_account"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="110dp"
        android:layout_marginEnd="20dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:gravity="center_vertical"
        android:text="wx_1351321"
        android:textColor="@color/gray_cccccc"
        android:textSize="@dimen/ts_16"
        app:layout_constraintBottom_toBottomOf="@+id/tv_member_account_title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_member_account_title" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/gray_F5F5F5"
        app:layout_constraintBottom_toBottomOf="@+id/tv_member_account_title" />

    <TextView
        android:id="@+id/tv_member_role_title"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/member_role"
        android:textColor="@color/black_333333"
        android:textSize="@dimen/ts_18"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_member_account_title" />

    <TextView
        android:id="@+id/tv_member_role"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="110dp"
        android:layout_marginEnd="20dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:gravity="center_vertical"
        android:text="@string/role_member"
        android:textColor="@color/gray_cccccc"
        android:textSize="@dimen/ts_16"
        app:layout_constraintBottom_toBottomOf="@+id/tv_member_role_title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_member_role_title" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/gray_F5F5F5"
        app:layout_constraintBottom_toBottomOf="@+id/tv_member_role_title" />

    <TextView
        android:id="@+id/tv_delete_member"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/btn_rad4_color_e54545"
        android:gravity="center"
        android:visibility="gone"
        android:text="@string/delete_member"
        android:textColor="@color/white"
        android:textSize="@dimen/ts_20"
        app:layout_constraintTop_toBottomOf="@+id/tv_member_role_title" />

    <View
        android:id="@+id/member_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.7"
        android:background="@color/black"
        android:visibility="gone" />


</androidx.constraintlayout.widget.ConstraintLayout>